--- a/frontend/src/routes/Home.css
+++ b/frontend/src/routes/Home.css
@@ -1,10 +1,11 @@
 .home {
     margin: 0;
     width: auto;
-    height: 100vh;
+    height: 91.5vh;
     background-image: url("../img/background.jpg");
     background-repeat : no-repeat;
     background-size : cover;
+    z-index: 2;
 }
 
 #home_title {
@@ -23,7 +24,7 @@
     text-decoration: none;
     background-color: purple;
     display: block;
-    width: 50px;
+    width: 100px;
     margin:auto;
     border-radius: 10px;
     text-align: center;
