--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,21 +1,27 @@
 body {
   margin: 0;
-  font-family: 'BMJUA', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  height: 100vh;
+  font-family: 'Nanum', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: 'BMJUA', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Nanum', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 @font-face {
   font-family: 'BMJUA';
   font-style: normal;
   src: url("./font/BMJUA.woff") format('woff');
+}
+
+@font-face {
+  font-family: 'Nanum';
+  font-style: normal;
+  src: url("./font/NanumSquareRoundR.ttf") format('woff');
 }
 
 .navbar-light {
