--- a/frontend/src/routes/Home.css
+++ b/frontend/src/routes/Home.css
@@ -1,11 +1,15 @@
 .home {
     margin: 0;
-    width: auto;
-    height: 91.5vh;
+    /* width: auto;
+    height: 92.5vh; */
     background-image: url("../img/background.jpg");
-    background-repeat : no-repeat;
-    background-size : cover;
-    z-index: 2;
+    width: 100%;
+    height: 100vh;
+    max-width: 100% !important;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 #home_title {
@@ -24,7 +28,7 @@
     text-decoration: none;
     background-color: purple;
     display: block;
-    width: 100px;
+    width: 150px;
     margin:auto;
     border-radius: 10px;
     text-align: center;
