--- a/frontend/src/routes/Register.css
+++ b/frontend/src/routes/Register.css
@@ -2,16 +2,26 @@
   box-sizing: border-box;
 }
 
-.login-form {
-    width: 30%;
+#register_title {
+  text-align: center;
+  margin-top: 0;
+  padding-top: 130px;
+  padding-bottom: 60px; 
+  font-size: 60px;
+  color: black;
+}
+
+.register-form {
+    width: 40%;
     margin: auto;
+    margin-top: 0px;
     background-color: white;
     padding: 5rem;
     border-radius: 15px ;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.7);
 }
 
-.login-button {
+.register-button {
     width: 100px;
     margin: auto;
 }
